force-app/main/default/objects/Reference_RA_Religious_Moral_Belief__c/Reference_RA_Religious_Moral_Belief__c.object-meta.xml
<CustomObject>
    <label>Reference RA - Religious - Moral Belief</label>
    <nameField>
        <displayFormat>RMB{00000}</displayFormat>
        <label>Reference RA - Religious - Moral Belief Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Reference RA - Religious - Moral Belief</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>