force-app/main/default/objects/Reference_RA_Religious_Moral_Belief__c/fields/RA_Religious_or_Moral_Belief_Q_10__c.field-meta.xml
<CustomField>
    <fullName>RA_Religious_or_Moral_Belief_Q_10__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Is there a financial cost for the requested accommodation?  If so, describe any costs and how the employer determined these costs.</inlineHelpText>
    <label>RA - Religious or Moral Belief - Q 10</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>