force-app/main/default/objects/Reference_RA_Religious_Moral_Belief__c/fields/RA_Religious_or_Moral_Belief_Q_11__c.field-meta.xml
<CustomField>
    <fullName>RA_Religious_or_Moral_Belief_Q_11__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Does the employer believe that the financial cost would negatively impact their business? If so, describe how and obtain copies of documents that the employer would use to support or explain this financial impact.</inlineHelpText>
    <label>RA - Religious or Moral Belief - Q 11</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>