force-app/main/default/objects/Reference_RA_Religious_Moral_Belief__c/fields/RA_Religious_or_Moral_Belief_Q_15__c.field-meta.xml
<CustomField>
    <fullName>RA_Religious_or_Moral_Belief_Q_15__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Does the employer believe that other employees will request similar accommodations? If so, explain in detail why, and include the specific facts that support this belief.</inlineHelpText>
    <label>RA - Religious or Moral Belief - Q 15</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>