force-app/main/default/objects/Reference_RA_Religious_Moral_Belief__c/fields/Religious_Moral_Relevant_Documentatiion__c.field-meta.xml
<CustomField>
    <fullName>Religious_Moral_Relevant_Documentatiion__c</fullName>
    <description>RA - Religious or Moral Belief - Relevant Documentation</description>
    <inlineHelpText>All escalated matters must include the key, relevant documentation you mention in this document. Check for and be sure to attach copies of relevant documents when you submit the matter to your coach, including:</inlineHelpText>
    <label>Religious-Moral- Relevant Documentation</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>The employee’s written request</fullName>
            </value>
            <value>
                <fullName>Written policies or rules</fullName>
            </value>
            <value>
                <fullName>Signed acknowledgements of applicable policies, rules, and/or employer handbook</fullName>
            </value>
            <value>
                <fullName>The employer’s documentation of communications with the employee, including:</fullName>
            </value>
            <value>
                <fullName>Dates and content of the discussion</fullName>
            </value>
            <value>
                <fullName>Notes of verbal conversations</fullName>
            </value>
            <value>
                <fullName>Email exchanges and text messages</fullName>
            </value>
            <value>
                <fullName>Any other relevant documents</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>